# docs/swagger.json
@@ -79,6 +79,55 @@
                 }
             }
         },
+        "/me": {
+            "get": {
+                "description": "自身のユーザー情報を取得する",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "GetMe",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.UserResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/refresh": {
+            "post": {
+                "description": "アクセストークンをリフレッシュする",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Refresh",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "リフレッシュトークン",
+                        "name": "x-refresh-token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.RefreshResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/signin": {
             "post": {
                 "description": "ユーザーのサインインを行う",
@@ -86,7 +135,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "auth"
                 ],
                 "summary": "SignIn",
                 "parameters": [
@@ -111,13 +160,18 @@
             }
         },
         "/signup": {
-            "post": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "ユーザーのサインアップを行う",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "auth"
                 ],
                 "summary": "SignUp",
                 "parameters": [
@@ -135,7 +189,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.UserSignupResponse"
+                            "$ref": "#/definitions/response.UserResponse"
                         }
                     }
                 }
@@ -303,6 +357,17 @@
                 }
             }
         },
+        "response.RefreshResponse": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "expiresIn": {
+                    "type": "string"
+                }
+            }
+        },
         "response.StoryListResponse": {
             "type": "object",
             "required": [
@@ -360,22 +425,7 @@
                 }
             }
         },
-        "response.UserSigninResponse": {
-            "type": "object",
-            "required": [
-                "accessToken",
-                "refreshToken"
-            ],
-            "properties": {
-                "accessToken": {
-                    "type": "string"
-                },
-                "refreshToken": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.UserSignupResponse": {
+        "response.UserResponse": {
             "type": "object",
             "required": [
                 "createdAt",
@@ -401,6 +451,21 @@
                     "type": "string"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.UserSigninResponse": {
+            "type": "object",
+            "required": [
+                "accessToken",
+                "refreshToken"
+            ],
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "refreshToken": {
                     "type": "string"
                 }
             }
